Adds all misssing items on the public website

--- a/apps/web/src/content/docs/index.mdx
+++ b/apps/web/src/content/docs/index.mdx
@@ -1,51 +1,54 @@
 ---
 title: Introduction
-description: Learn how to navigate and use the platform with ease through this documentation.
+description: Welcome to SearchFit - the AI-powered platform that makes your business discoverable across all search platforms.
 ---
 
-Our documentation is designed to empower developers, administrators, and users with comprehensive, accessible guidance. Whether you're taking your first steps or diving deep into advanced features, this guide provides the insights you need to maximize your platform experience.
+SearchFit is the comprehensive platform for tracking and optimizing your visibility across traditional search engines and AI-powered platforms like ChatGPT, Perplexity, Claude, and Gemini.
 
-## Purpose and Scope
+## What is SearchFit?
 
-This documentation serves as your comprehensive roadmap, offering:
+In the age of AI, users are increasingly discovering businesses through conversational AI assistants rather than traditional search engines. SearchFit helps you:
 
-- Clear, step-by-step instructions
-- Practical tutorials and real-world examples
-- Insights into platform capabilities and best practices
+- **Track AI Visibility** - Monitor how often and how accurately AI platforms mention your brand
+- **Optimize for AEO** - Implement Answer Engine Optimization strategies to improve your AI presence
+- **Generate Content** - Create SEO and AEO-optimized content with AI assistance
+- **Analyze Performance** - Get actionable insights from comprehensive analytics
 
-## Key Objectives
+## Key Features
 
-Our goal is to help you:
+### AI Tracking
+Monitor your brand's visibility across ChatGPT, Perplexity, Claude, and Gemini. Understand how AI platforms perceive and recommend your business.
 
-- Quickly understand platform fundamentals
-- Solve complex challenges efficiently
-- Implement best practices
-- Optimize your workflow
+### Content Generation
+Create optimized content that ranks well in both traditional search and AI-powered answer engines.
 
-## Navigation Strategies
+### Analytics Dashboard
+Comprehensive analytics to track your progress, identify opportunities, and measure ROI.
 
-### Table of Contents
+### Technical Audits
+Automated SEO audits to identify and fix technical issues affecting your visibility.
 
-Use the structured menu to explore topics systematically. Each section is organized logically to support progressive learning.
+### Integrations
+Connect with 40+ tools including Google Analytics, Search Console, and popular CMS platforms.
 
-### Search Functionality
+## Getting Started
 
-Leverage the powerful search feature to instantly locate specific information, code snippets, or troubleshooting guides.
+Ready to improve your AI visibility? Here's how to get started:
 
-## Learning Approach
+1. **[Create an account](/auth/sign-up)** - Sign up for free to explore the platform
+2. **[Run your first report](/docs/quick-start)** - Generate an AEO report for your domain
+3. **[Connect integrations](/docs/integrations)** - Link your existing analytics tools
+4. **[Explore the dashboard](/docs/account-setup)** - Navigate the features and start optimizing
 
-We've crafted this documentation with several principles in mind:
+## Why AEO Matters
 
-- Clarity over complexity
-- Practical, actionable guidance
-- Consistent, user-friendly formatting
-- Progressive learning path from basics to advanced techniques
+Traditional SEO focuses on ranking in search engine results pages (SERPs). But with the rise of AI assistants, a new discipline has emerged: **Answer Engine Optimization (AEO)**.
 
-## Getting the Most from This Guide
+AEO ensures your business is accurately represented when AI systems answer user queries. This includes:
 
-1. Start with the "Getting Started" section
-2. Follow tutorials sequentially
-3. Experiment with code examples
-4. Refer back to specific sections as needed
+- Being mentioned as a solution to user problems
+- Having accurate business information in AI responses
+- Being recommended in relevant contexts
+- Appearing in AI-generated comparisons and lists
 
-By investing time in understanding these resources, you'll transform from a novice user to a platform expert.
+SearchFit provides the tools and insights you need to succeed in both SEO and AEO.
